# Infrasafe_bot

./: .dockerignore  .env.example  .env.postgres.example  .env.production.template  .env.unified.example  .gitignore  .pre-commit-config.yaml  ADMIN_ALL_ROLES_UPDATE.md  AGENTS.md  AI_REALISTIC_TIMELINE.md  API_DOCUMENTATION_AUDIT_REPORT.md  API_DOCUMENTATION_CRITICAL_ISSUES.md  ARCHITECTURE_COMPARISON.md  AUDIT_REPORT.md  CLAUDE.md  CRITICAL_FIXES_APPLIED.md  CROSS_SERVICE_INTEGRATION.md  Caddyfile  Codex_audit.md  DATABASE_ACTION_PLAN.md  DATABASE_FINAL_SUMMARY.md  DATABASE_MIGRATION_GUIDE.md  DATABASE_README.md  DATABASE_RECOMMENDATIONS.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_ACTUAL.md  DEPLOYMENT_ANALYSIS_REPORT.md  DEPLOYMENT_FIXES.md  DEVELOPMENT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.access  Dockerfile.api  Dockerfile.dev  FIX_MEDIA_SERVICE_CONNECTION.md  FIX_PENDING_USERS.md  GOOGLE_SHEETS_IMPORT_GUIDE.md  HEALTH_CHECK_REPORT.md  IMPLEMENTATION_PLAN.md  INTERACTIVE_EXAMPLES.md  (+98 more)
MemoryBank/: API_DOCUMENTATION.md  Auth.md  (+106 more)
resource-accounting/backend/: Dockerfile  pyproject.toml
resource-accounting/backend/alembic/: env.py
resource-accounting/backend/alembic/versions/: 001_initial_schema.py
resource-accounting/backend/app/: config.py  db.py  main.py  seed.py  worker.py
resource-accounting/backend/scripts/: entrypoint-api.sh
resource-accounting/backend/tests/: conftest.py  test_auth.py  test_catalog_objects.py  test_db_constraints.py  test_exports_analytics.py  test_imports.py  test_meter_entry_role.py  test_meters.py  test_readings.py  test_security.py
(+2071 files in other folders)
