[project]
name = "resource-accounting-api"
version = "0.1.0"
description = "UK Resource Accounting service: meters, readings, reconciliation exports"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "httpx>=0.27",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
# Advisory only (run with `|| true` in CI); not a merge gate yet.

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
